--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,5 +14,10 @@
     "next": "^12.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.2.15",
+    "tailwindcss": "^3.0.2"
   }
 }
